--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
 <body>
 
 	<header>
-		<h1> <span class="tab-desk">&#9836;</span> Strike a Chord <span class="tab-desk">&#9836;</span> </h1>
+		<h1> <span class="tab-desk">&#9836;</span> Strike a Chord <span class="tab-desk">&#9836;</span></h1>
 	</header>
 	
 	<nav>
@@ -34,7 +34,8 @@
         <div id="contact">
             
             <h2>Contact us today to schedule your first lesson.</h2>
-            <p class="tel-link"><a href="tel:8145559228">(814) 555-9228</a></p>
+            <p class="tel-link mobile"><a href="tel:8145559228">(814) 555-9228</a></p>
+			<p> class="tab-desk"(814) 555-9228 </p>
             <p>Email: <a href="mailto:lessons@strikeachord.net" class="email-link">lessons@strikeachord.net</a></p>
             <p>We are located at: 1122 Music Lane, Chicago, IL 60007</p>
             
